w30-manager(pom), w30-manager-pojo/service/mapper(jar), w30-manager-web(war)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
-
 bankend/.metadata
 bankend/RemoteSystemsTempFiles
+
+
+bankend/w30-common/.settings
+bankend/w30-common/target
+
+bankend/w30-manager/.settings
+bankend/w30-manager/target
+
+bankend/w30-manager/*/.settings
+bankend/w30-manager/*/target
+
+.project
+.classpath
